--- a/scss/main.scss
+++ b/scss/main.scss
@@ -92,7 +92,8 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
+@import 'bourbon';
+@import 'custom';
 
 
 
