--- a/scss/main.scss
+++ b/scss/main.scss
@@ -94,6 +94,7 @@ textarea {
    ========================================================================== */
 @import 'bourbon';
 @import 'custom';
+@import 'responsive';
 
 
 
