--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -5,24 +5,31 @@
 	
 	font-size: 100%; /* =16px */
 	color: #333;
+
+}
 	
-	h1 { font-size: 1.5em; border-bottom: 0.1em #333 solid ;} 
-	h2 {font-size: 1.3em; color:silver; max-width: 100%;}
+h1 { font-size: 1.5em; border-bottom: 0.1em #333 solid ;} 
+h2 {font-size: 1.3em; color:silver; max-width: 100%;}
 
-	img {max-width: 100%;}
+img {max-width: 100%;}
 
-	a:hover { 	zoom: 1;
-			  	filter: alpha(opacity=50);
-				opacity: 0.5;
-			}
+a {text-decoration:none;}
 
-} 
+a:hover { 	zoom: 1;
+			filter: alpha(opacity=50);
+			opacity: 0.5;
+}
+
+//---------------------------------------------- tools
+
+$colorP:rgba(228, 127, 45, 1.0);
+.float-right{ float: right;} 
 
 //---------------------------------------------- GRID
 
 body { width:80%; margin:0 auto;}
 
-header {padding:1em;}
+header {padding:1em 0; }
 
 .width-1-2 {width:50%;}
 .width-1-3 {width:33%;}
@@ -37,8 +44,16 @@ header {padding:1em;}
 
 section { display:block;@include clearfix;}
 
-footer { padding:1em;@include clearfix; border-top:0.1em #333 solid ;  }
+footer { padding:1em;@include clearfix; border-top:0.1em #333 solid ; color:#333;  
 
+		
+
+}
+
+.separador { font-weight:bold; background: $colorP; color: $colorP;}
+
+.contacte {background: rgba(228, 127, 45, 0.8); padding: 0 0.4em;}
+.contacte:hover {background: rgba(228, 127, 45, 1.0);color:#333; filter:none;opacity:1.0;}
 
 .musics { padding:3em;}
 
