--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -31,9 +31,9 @@ body { width:80%; margin:0 auto;}
 
 header {padding:1em 0; }
 
-.width-1-2 {width:50%;}
-.width-1-3 {width:33%;}
-.width-1-4 {width:25%;}
+.width-1-2 {width:50%; display: inline-block;}
+.width-1-3 {width:33%; display: inline-block;}
+.width-1-4 {width:25%; display: inline-block;}
 
 .module {
 		padding:2em;
@@ -42,18 +42,18 @@ header {padding:1em 0; }
 }
 
 
-section { display:block;@include clearfix;}
+section {display:block; @include clearfix;}
 
-footer { padding:1em;@include clearfix; border-top:0.1em #333 solid ; color:#333;  
+footer {padding:1em;@include clearfix; border-top:0.1em #333 solid ; color:#333;  
 
 		
 
 }
 
-.separador { font-weight:bold; background: $colorP; color: $colorP;}
+.separador {font-weight:bold; background: $colorP; color: $colorP; margin:0 0.5em;}
 
-.contacte {background: rgba(228, 127, 45, 0.8); padding: 0 0.4em;}
-.contacte:hover {background: rgba(228, 127, 45, 1.0);color:#333; filter:none;opacity:1.0;}
+.contacte {background:rgba(228, 127, 45, 0.8); padding:0 0.4em;}
+.contacte:hover {background:rgba(228, 127, 45, 1.0); color:#333; filter:none;opacity:1.0;}
 
 .musics { padding:3em;}
 
