--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -27,24 +27,26 @@ $colorP:rgba(228, 127, 45, 1.0);
 
 //---------------------------------------------- GRID
 
-body { width:80%; margin:0 auto;}
+body { width:70%; margin:0 auto;}
 
-header {padding:1em 0; }
+header{ margin-bottom: 1em; @include clearfix;}
 
 .width-1-2 {width:50%; display: inline-block;}
 .width-1-3 {width:33%; display: inline-block;}
 .width-1-4 {width:25%; display: inline-block;}
 
 .module {
-		padding:2em;
+		padding:1em;
 		float:left;
 		@include clearfix;
 }
 
 
-section {display:block; @include clearfix;}
+section {@include clearfix; margin-top: 1em; display: block;}
 
-footer {padding:1em;@include clearfix; border-top:0.1em #333 solid ; color:#333;  
+footer { padding:0.5em 0;@include clearfix; border-top:0.1em #333 solid; color:#333; 
+
+		padding-bottom: 4em; 
 
 		
 
@@ -52,14 +54,32 @@ footer {padding:1em;@include clearfix; border-top:0.1em #333 solid ; color:#333;
 
 .separador {font-weight:bold; background: $colorP; color: $colorP; margin:0 0.5em;}
 
-.contacte {background:rgba(228, 127, 45, 0.8); padding:0 0.4em;}
+.menu {  list-style:none; float:right;
+		
+		
+
+		li{ padding: 0 0.5em; float:right;}
+
+		a {background:rgba(228, 127, 45, 0.8); padding: 0.3em 0.5em; }
+
+	}
 .contacte:hover {background:rgba(228, 127, 45, 1.0); color:#333; filter:none;opacity:1.0;}
 
 .musics { padding:3em;}
 
 
 
+.noticies {  
+	
+	img{float: left;}
 
+	h1{ width:80%;}
+
+	p{ float:right; width:50%; margin-right: 20%;}
+
+	a { color: $colorP;}
+
+}
 
 
 
