--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -4,15 +4,23 @@
 	
 	body { width:95%; }
 
-	*{ font-size: 90%;}
+	
 
 	.module {
 			padding:0.5em;
 			
-			width: 50%;
+			float: left; 
+			width: 100%;
 	}
 	
 	.logo { width: 100%;}
+
+	.noticies {  
+
+		h1{width:100% !important;}
+
+		p{width:100% !important; margin:0; padding-top: 1em;}
+	}
 
 }
 
@@ -20,25 +28,25 @@
 
 @media (max-width: 64em) {
 
-	*{ font-size:95%;}
+	
 
 	body { width:90%; }
 
-	.module {
-			padding:1em;
-			float:left;
-			@include clearfix;
+	.noticies { 
+
+
+		p{width:80%; margin:0; padding-top: 1em; float: left;}
 	}
+
+
 
 }
 
 
 @media (min-width: 100em) {
 
-	body { width:70%; margin:0 auto;}
-	.module {
-			padding:0;
-	}
+	body { width:70%; margin:0 auto; max-width: 1100px;}
+	
 	
 
 }
